--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ on:
         description: 'Tag for the Docker image'
         required: true
         type: string
-        default: 'latest'
+        default: 'my-image:latest'
          
 jobs:
   build-and-push:
