--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-  workflow_call:  # Allows this workflow to be reused by other workflows
+  workflow_call:
     inputs:
       dockerfile:
         description: 'Path to the Dockerfile'
@@ -14,12 +14,12 @@ on:
         description: 'Docker repo name (e.g., user/repo)'
         required: true
         type: string
-        default: 'venkatalakshmi0448/my-image'  # Your Docker Hub repository
+        default: 'venkatalakshmi0448/my-image'
       tags:
         description: 'Tag for the Docker image'
         required: true
         type: string
-        default: 'latest'  # Default tag for the image
+        default: 'latest'
 
 jobs:
   build-and-push:
