--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ on:
         required: true
         type: string
         default: 'venkatalakshmi0448/nodejs-docker'
-      tags:
+      tag:
         description: 'Tag for the Docker image'
         required: true
         type: string
@@ -39,12 +39,12 @@ jobs:
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v3
       with:
         context: .
         file: ${{ inputs.dockerfile }}
         push: true
-        tags: ${{ inputs.dockerhub_repo }}:${{ inputs.tags }}
+        tags: ${{ inputs.dockerhub_repo }}::${{ inputs.tag }}
         
     - name: Logout from DockerHub
       run: docker logout
