--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,7 +50,7 @@ jobs:
         context: .
         file: ${{ inputs.dockerfile }}  # Use `inputs.dockerfile` instead of `github.event.inputs.dockerfile`
         push: true
-        tags: ${{ inputs.dockerhub_repo }}:${{ inputs.tag }}  # Use `inputs.tag` instead of `github.event.inputs.tag`
+        tags: ${{ inputs.dockerhub_repo }}-${{ inputs.tag }}  # Use `inputs.tag` instead of `github.event.inputs.tag`
       
     
     - name: Logout from DockerHub
