--- a/.github/workflows/nodejs-image-build.yml
+++ b/.github/workflows/nodejs-image-build.yml
@@ -47,3 +47,9 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+
+    - name: Run terminal commands
+      run: |
+         npm start
+         curl http://localhost:3000/api/endpoint
+         echo "Test Finished!"
