--- a/.github/workflows/nodejs-image-build.yml
+++ b/.github/workflows/nodejs-image-build.yml
@@ -1,13 +1,15 @@
-name: Build and Push Docker Image
+name: Validate Application Pipeline
 on:
   push:
     branches:
       - main
-  pull_request:
-     branches:
-       - main
   workflow_call:
     inputs:
+      branch:
+        description: 'Branch to validate'
+        required: true
+        type: string
+        default: main
       dockerfile:
         description: 'Path to the Dockerfile'
         required: true
@@ -25,33 +27,50 @@ on:
         default: 'staging'
 
 jobs:
-  build-and-push:
+  validate:
     runs-on: ubuntu-latest
+    environment:
+      name: 'validate'
+    
+    strategy:
+      matrix:
+        step: ['checkout', 'docker-login', 'docker-build', 'docker-push']
 
     steps:
-    - name: Check out the repository
-      uses: actions/checkout@v3
+      # Checkout step
+      - name: Checkout code
+        if: matrix.step == 'checkout'
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.branch }}
+        
+      # Docker login step
+      - name: Docker Login
+        if: matrix.step == 'docker-login'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      # Docker build step
+      - name: Build Docker image
+        if: matrix.step == 'docker-build'
+        run: |
+          echo "Validating Docker build step"
+          docker build -f ${{ inputs.dockerfile }} .
 
-    - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      # Docker push step
+      - name: Push Docker image
+        if: matrix.step == 'docker-push'
+        run: |
+          echo "Validating Docker push step"
+          docker push ${{ inputs.dockerhub_repo }}
 
-    - name: Extract metadata (tags, labels) for docker
-      id: meta
-      uses: docker/metadata-action@v3
-      with: 
-         images: venkatalakshmi0448/nodejs-docker
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        file: ${{ inputs.dockerfile }} 
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+  validate-environment:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check if environment variables are set
+        run: |
+          echo "Validating Environment Variables"
+          echo "DOCKERHUB_USERNAME = ${{ secrets.DOCKERHUB_USERNAME }}"
+          echo "DOCKERHUB_PASSWORD = ${{ secrets.DOCKERHUB_PASSWORD }}"
