--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -13,7 +13,7 @@ on:
         description: 'Path to the Dockerfile'
         required: true
         type: string
-        default: './Dockerfile'
+        default: './dockerfile'
       dockerhub_repo:
         description: 'Dockerhub repo name'
         required: true
